[package]
name = "parity-secretstore-substrate-service"
version = "1.0.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3"
log = "0.4"
parity-crypto = { version = "0.4", features = ["publickey"] }
parity-secretstore-blockchain-service = { git = "https://github.com/svyatonik/secretstore-blockchain-service.git" }
parity-secretstore-primitives = { git = "https://github.com/svyatonik/secretstore-primitives.git" }
